# sampler_file_manager

./: CMakeLists.txt  building.txt  copy_msys_dlls.sh  readme.md
src/: CMakeLists.txt  library_IDs.hpp  main.cpp
src/E-MU/: CMakeLists.txt  EMU_FS_drv.cpp  EMU_FS_drv.hpp  EMU_FS_types.hpp  fs_common.cpp  fs_common.hpp  fsck.cpp  mkfs.cpp
src/E-MU/Tests/: CMakeLists.txt  EMU_FS_tests.cpp  EMU_FS_thread_tests.cpp  Helpers.cpp  Helpers.hpp  fs_drv_unit_tests.cpp  fs_test_data.hpp
src/E-MU/Tests/Data/: test_file
src/GUI/: CMakeLists.txt  dir_history.cpp  dir_history.hpp  dir_list_item.cpp  dir_list_item.hpp  filename_validator.cpp  filename_validator.hpp  fs_list_model.cpp  fs_list_model.hpp  main_window.cpp  main_window.hpp  min_vfs_model.cpp  min_vfs_model.hpp  min_vfs_selection_model.cpp  min_vfs_selection_model.hpp  mkfs_dialog.cpp  mkfs_dialog.hpp  task_msg_proxy.cpp  task_msg_proxy.hpp
src/Host_FS/: CMakeLists.txt  host_drv.cpp  host_drv.hpp
src/Host_FS/Tests/: CMakeLists.txt  fs_drv_tests.cpp  fs_drv_unit_tests.cpp
src/Host_FS/Tests/Data/: read_test_file_1
src/Roland/: CMakeLists.txt
src/Roland/S5XX/: CMakeLists.txt  S5XX_FS_drv.cpp  S5XX_FS_drv.hpp  S5XX_FS_types.hpp  fsck.cpp
src/Roland/S5XX/Tests/: CMakeLists.txt  fs_drv_test_data.hpp  fs_drv_tests.cpp  fs_drv_thread_tests.cpp  fs_drv_unit_tests.cpp  helpers.cpp  helpers.hpp
src/Roland/S5XX/Tests/Data/: S550_CD_SB.img  S550_HDD_SB.img  base_test_fs.txt  test_file.s5xx
src/Roland/S7XX/: CMakeLists.txt  S7XX_FS_drv.cpp  S7XX_FS_drv.hpp  S7XX_FS_types.hpp  S7XX_types.hpp  fs_drv_constants.hpp  fs_drv_helpers.cpp  fs_drv_helpers.hpp  fsck.cpp  host_FS_utils.cpp  host_FS_utils.hpp  mkfs.cpp
src/Roland/S7XX/Tests/: CMakeLists.txt  Helpers.cpp  Helpers.hpp  Host_FS_test_data.hpp  Test_data.hpp  fs_drv_tests.cpp  fs_drv_thread_tests.cpp  fs_drv_unit_tests.cpp  host_FS_tests.cpp
src/Roland/S7XX/Tests/Data/: test_fs.img.tar.xz
src/Roland/S7XX/Tests/Data/ref_host_fs/: OS
src/Roland/S7XX/Tests/Data/ref_host_fs/Partials/: 0-TST-Test_01  1-TST-Test_02  2-TST-Test_03  3-TST-Test_04  4-TST-Test_05
src/Roland/S7XX/Tests/Data/ref_host_fs/Patches/: 0-TST-Test_01  1-TST-Test_02  2-TST-Test_03  3-TST-Test_04  4-TST-Test_05
src/Roland/S7XX/Tests/Data/ref_host_fs/Performances/: 0-TST-Test_01
src/Roland/S7XX/Tests/Data/ref_host_fs/Samples/: 0-TST-Test_01   -L  1-TST-Test_01   -R  2-TST-Test_02  3-TST-Test_03  4-TST-Test_04
src/Roland/S7XX/Tests/Data/ref_host_fs/Volumes/: 0-TST-Test_01
src/Tests/: CMakeLists.txt  str_util_test.cpp
src/Utils/: CMakeLists.txt  FAT_utils.hpp  ints.hpp  str_util.hpp  testing_helpers.cpp  testing_helpers.hpp  utils.hpp
src/Utils/Tests/: CMakeLists.txt  FAT_utils_test.cpp
src/min_vfs/: CMakeLists.txt  dentry.cpp  filesystem.cpp  min_vfs.cpp  min_vfs.hpp  min_vfs_base.cpp  min_vfs_base.hpp  path_concat_helpers.cpp  path_concat_helpers.hpp  stream.cpp
src/min_vfs/Tests/: CMakeLists.txt  helpers.cpp  helpers.hpp  min_vfs_tests.cpp  test_data.hpp
src/min_vfs/Tests/Data/: base_test_fs.img  test_S7XX_fs.img  test_S7XX_fs.img.tar.xz
